#define NULL ((void*)0)
typedef unsigned long size_t;  // Customize by platform.
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;  // Either arithmetic or pointer type.
/* By default, we understand bool (as a convenience). */
typedef int bool;
#define false 0
#define true 1

/* Forward declarations */
typedef  struct TYPE_7__   TYPE_2__ ;
typedef  struct TYPE_6__   TYPE_1__ ;

/* Type definitions */
struct TYPE_6__ {size_t n; int /*<<< orphan*/ * z; } ;
typedef  TYPE_1__ Token ;
struct TYPE_7__ {int /*<<< orphan*/ * zEnd; int /*<<< orphan*/ * zStart; } ;
typedef  TYPE_2__ ExprSpan ;

/* Variables and functions */

__attribute__((used)) static void spanSet(ExprSpan *pOut, Token *pStart, Token *pEnd){
    pOut->zStart = pStart->z;
    pOut->zEnd = &pEnd->z[pEnd->n];
  }